# LPA-for-Detection

./: .gitignore  Detector.ipynb  LPA-Detection-FindPromptinReal-WithStemmingAndStopwords.ipynb  LPA-Detection-FindPromptinReal.ipynb  LPA-DetectionFoodBlogs.ipynb  LPA_Experiment - Wrapper.ipynb  PreProcess Data LPA2 .ipynb  README.md  pyproject.toml
data/: README.md
docs/: STRUCTURE.md
notebooks/detection/: Detector.ipynb  LPA-Detection-FindPromptinReal.ipynb
notebooks/experiments/: LPA_Experiment - Wrapper - Try-3-dvr-2000.ipynb  LPA_Experiment - Wrapper - Try-3.ipynb  LPA_Experiment - Wrapper - warcraft.ipynb  LPA_Experiment - Wrapper.ipynb
notebooks/exploratory/: Testing-Ideas.ipynb
notebooks/generation/: Generate tons of stories.ipynb
notebooks/political/: LPA-Political.ipynb
notebooks/preprocessing/: PresidentialSpeeches - PreProcess.ipynb
notebooks/tutorial/: LPA - Tutorial.ipynb
scripts/: _add_notebook_bootstrap.py  run_lpa.py
src/: visualize.py
tests/: conftest.py  test_LPA.py
